
## Shells for the various kinds of test.
BOURNE_SHELL = $(bourne_shell)
C_SHELL = $(C_shell)


CLEANFILES = \
	PulseTLM.o \
	parseFile.o \
	userOutput.o \
	cmap2.o \
	hsvrgb.o 

EXTRA_DIST = \
	./tests/Makefile \
	./tests/case01 \
	./tests/test01.sh \
	./tests/test01.csh \
	./tests/compare/case01.log \
	./tests/compare/case01_e0.dat \
	./tests/compare/case01_o0.dat \
	./tests/compare/case01_o1.dat \
	./tests/case02 \
	./tests/test02.sh \
	./tests/test02.csh \
	./tests/compare/case02.log \
	./tests/compare/case02_e0.dat \
	./tests/compare/case02_o0.dat \
	./tests/compare/case02_o1.dat \
	./tests/case03 \
	./tests/test03.sh \
	./tests/test03.csh \
	./tests/compare/case03.log \
	./tests/compare/case03_e0.dat \
	./tests/compare/case03_o0.dat \
	./tests/compare/case03_o1.dat \
	./tests/case04 \
	./tests/test04.sh \
	./tests/test04.csh \
	./tests/compare/case04.log \
	./tests/compare/case04_e0.dat \
	./tests/compare/case04_o0.dat \
	./tests/compare/case04_o1.dat \
	./tests/case05 \
	./tests/test05 \
	./tests/test05.sh \
	./tests/test05.csh \
	./tests/compare/case05.log \
	./tests/compare/case05_e0.dat \
	./tests/compare/case05_o0.dat \
	./tests/compare/case05_o1.dat \
	./tests/case06 \
	./tests/test06.sh \
	./tests/test06.csh \
	./tests/compare/case06.log \
	./tests/compare/case06_e0.dat \
	./tests/compare/case06_o0.dat \
	./tests/compare/case06_o1.dat \
	./tests/case07 \
	./tests/test07.sh \
	./tests/test07.csh \
	./tests/compare/case07.log \
	./tests/compare/case07_e0.dat \
	./tests/compare/case07_o0.dat \
	./tests/compare/case07_o1.dat \
	./tests/compare/case07_o2.viz \
	./tests/compare/case07_o2_000000.bob \
	./tests/compare/case07_o2_000100.bob \
	./tests/compare/case07_o2_000200.bob \
	./tests/compare/case07_o2_000300.bob \
	./tests/compare/case07_o2_000400.bob \
	./tests/compare/case07_o2_000500.bob \
	./tests/compare/case07_o2_000600.bob \
	./tests/compare/case07_o2_000700.bob \
	./tests/compare/case07_o2_000800.bob \
	./tests/compare/case07_o2_000900.bob \
	./tests/compare/case07_o2_001000.bob \
	./tests/compare/case07_o2_001003.bob \
	./tests/case08 \
	./tests/test08.sh \
	./tests/test08.csh \
	./tests/case09 \
	./tests/test09.sh \
	./tests/test09.csh \
	./tests/case10 \
	./tests/test10.sh \
	./tests/test10.csh \
	./tests/compare/case10_o0_000000.mtv \
	./tests/compare/case10_o0_000020.mtv \
	./tests/compare/case10_o0_000040.mtv \
	./tests/compare/case10_o0_000060.mtv \
	./tests/compare/case10_o0_000080.mtv \
	./tests/compare/case10_o0_000100.mtv \
	./tests/compare/case10_o0_000120.mtv \
	./tests/compare/case10_o0_000140.mtv \
	./tests/compare/case10_o0_000160.mtv \
	./tests/compare/case10_o0_000180.mtv \
	./tests/compare/case10_o0_000200.mtv \
	./tests/compare/case10_o0_000220.mtv \
	./tests/compare/case10_o0_000240.mtv \
	./tests/compare/case10_o0_000260.mtv \
	./tests/compare/case10_o0_000280.mtv \
	./tests/compare/case10_o0_000300.mtv \
	./tests/compare/case10_o0_000320.mtv \
	./tests/compare/case10_o0_000340.mtv \
	./tests/compare/case10_o0_000360.mtv \
	./tests/compare/case10_o0_000380.mtv \
	./tests/compare/case10_o0_000400.mtv \
	./tests/compare/case10_o0_000420.mtv \
	./tests/compare/case10_o0_000440.mtv \
	./tests/compare/case10_o0_000460.mtv \
	./tests/compare/case10_o0_000480.mtv \
	./tests/compare/case10_o0_000500.mtv \
	./tests/compare/case10_o0_000520.mtv \
	./tests/compare/case10_o0_000540.mtv \
	./tests/compare/case10_o0_000560.mtv \
	./tests/compare/case10_o0_000580.mtv \
	./tests/compare/case10_o0_000600.mtv \
	./tests/compare/case10_o0_000620.mtv \
	./tests/compare/case10_o0_000640.mtv \
	./tests/compare/case10_o0_000660.mtv \
	./tests/compare/case10_o0_000680.mtv \
	./tests/compare/case10_o0_000700.mtv \
	./tests/compare/case10_o0_000720.mtv \
	./tests/compare/case10_o0_000740.mtv \
	./tests/compare/case10_o0_000760.mtv \
	./tests/compare/case10_o0_000780.mtv \
	./tests/compare/case10_o0_000800.mtv \
	./tests/compare/case10_o0_000820.mtv \
	./tests/compare/case10_o0_000840.mtv \
	./tests/compare/case10_o0_000860.mtv \
	./tests/compare/case10_o0_000880.mtv \
	./tests/compare/case10_o0_000900.mtv \
	./tests/compare/case10_o0_000920.mtv \
	./tests/compare/case10_o0_000940.mtv \
	./tests/compare/case10_o0_000960.mtv \
	./tests/compare/case10_o0_000980.mtv \
	./tests/compare/case10_o0_001000.mtv \
	./tests/wr90 \
	ChangeLog


SUBDIRS = src doc tests

#AUTOMAKE_OPTIONS = no-dependencies
